Updated readme and added requirements to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -129,3 +129,29 @@ xattr==0.10.1
 zarr==2.16.1
 zopfli==0.2.3
 zstd==1.5.5.1
+astroid==2.15.6
+blinker==1.6.2
+click==8.1.7
+config==0.5.1
+dill==0.3.7
+Flask==2.3.3
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.1.1
+greenlet==2.0.2
+isort==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mysql==0.0.3
+mysqlclient==2.2.0
+platformdirs==3.10.0
+pylint==2.17.5
+PyMySQL==1.1.0
+python-dotenv==1.0.0
+SQLAlchemy==2.0.20
+tomlkit==0.12.1
+typing_extensions==4.8.0
+Werkzeug==2.3.7
+wrapt==1.15.0
